--- a/views/config_booking_backoffice.erb
+++ b/views/config_booking_backoffice.erb
@@ -35,6 +35,7 @@
               <p class="less_contrast_text "><%=t.booking_settings.form.assignation.allow_different_category_description%></p>
               <%= render_variable_checkbox_boolean('booking.assignation.automatic_resource_assignation', t.booking_settings.form.assignation.automatic_resource_assignation) %>
               <p class="less_contrast_text "><%=t.booking_settings.form.assignation.automatic_resource_assignation_description%></p>
+              <%= render_variable_select('booking.assignation.planning_style', t.booking_settings.form.assignation.planning_style.title, {compact:  t.booking_settings.form.assignation.planning_style.compact, extended:  t.booking_settings.form.assignation.planning_style.extended}) %>
               <div class="form-group">
                 <div class="col-xs-12">
                   <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
