--- a/views/resources_occupation.erb
+++ b/views/resources_occupation.erb
@@ -59,17 +59,18 @@
       </tbody>
     </table>
 
-    <h3 class="highlight_block">Stock disponible</h3>
     <% if (@detail.select {|k,v| !v[:available_stock].empty?}).size == 0%>
-      <div class="guiblock smaller_txt">
-        <ul>
-          <li>No hay stock disponible</li>
-        </ul>
-      </div>
+       <div class="guiblock smaller_txt">
+         <ul>
+           <li>No hay stock disponible</li>
+         </ul>
+       </div>
     <% else %>
       <% @detail.each do |product, value| %>
+
         <% unless value[:available_stock].empty? %>
-          <h4 class="bottom-border-solid"><%=product%></h4>
+          <h4 class="guiblock"><%=product%></h4>
+          <h5 class="bottom-border-solid">Stock disponible</h5>
           <div class="container_12">
             <% value[:available_stock].each do |v| %>
             <div class="grid_3">
@@ -79,32 +80,14 @@
             </div>
             <% end %>
           </div>
-          <%if value[:assignation_pending].size > 0%>
-            <div class="all-space all-border-dashed"><strong><%=value[:assignation_pending].size%></strong> pendiente de asignar</div>
-          <%end%>
+          <div class="all-space"><strong><%=[0, @detail[product][:stock] - @detail[product][:occupation]].max%></strong> disponibles <%if [0, @detail[product][:stock] - @detail[product][:occupation]].max != value[:available_stock].size%> (<%=value[:available_stock].size%> recursos asignables)<%end%></div>
         <% end %>
-      <% end %>
-      <div class="guiblock smaller_txt">
-        <ul>
-          <li>En gris aparece el stock que no es asignable (tanto interno como externo).</li>
-          <li>Con asterisco aparecen los coches "preasignados" por el sistema</li>
-        </ul>
-      </div>
-    <% end %>
 
-    <h3 class="highlight_block">Pendientes de asignar</h3>
-    <% if (@detail.select {|k,v| !v[:assignation_pending].empty?}).size == 0%>
-      <div class="guiblock smaller_txt">
-        <ul>
-          <li>No hay reservas con recursos pendientes de asignar</li>
-        </ul>
-      </div>
-    <% end %>
-    <% @detail.each do |key, value| %>
-      <% unless @detail[key][:assignation_pending].empty? %>
-        <h4 class="bottom-border-solid"><%=key%></h4>
-        <table class="table">
-          <thead class="table-header">
+
+        <% unless @detail[product][:assignation_pending].empty? %>
+          <h5 class="bottom-border-solid">Pendientes de asignar</h5>
+          <table class="table">
+            <thead class="table-header">
             <tr>
               <th class="table-cell" scope="col" style="width:80px">Id</th>
               <th class="table-cell" scope="col" style="width:150px">Info</th>
@@ -114,15 +97,15 @@
               <th class="table-cell" scope="col" style="width:80px">Fecha fin</th>
               <th class="table-cell" scope="col" style="width:50px">Preasignación</th>
             </tr>
-          </thead>
-          <tbody>  
-            <% @detail[key][:assignation_pending].each do |item| %>
+            </thead>
+            <tbody>
+            <% @detail[product][:assignation_pending].each do |item| %>
               <tr>
                 <td class="table-cell">
                   <% if item.origin == 'booking' %>
-                  <a href="/admin/booking/bookings/<%=item.id%>"><%=item.id%></a>
+                    <a href="/admin/booking/bookings/<%=item.id%>"><%=item.id%></a>
                   <% else %>
-                  <%= item.id %>
+                    <%= item.id %>
                   <% end %>
                 </td>
                 <td class="table-cell"><%= item.title%></td>
@@ -131,71 +114,76 @@
                 <td class="table-cell"><%= item.date_from.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_from %> <% end %></td>
                 <td class="table-cell"><%= item.date_to.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_to %> <% end %></td>
                 <td class="table-cell"><%= item.preassigned_item_reference %>*</td>
-              </tr> 
+              </tr>
             <% end %>
-          </tbody>
-        </table>
+            </tbody>
+          </table>
+          <div class="all-space"><strong><%=@detail[product][:assignation_pending].size%></strong> pendiente de asignar</div>
+        <% end %>
+
+
+        <% if @data.select{|id, detail| detail[:category] == product and !detail[:available]}.size > 0 %>
+          <h5 class="bottom-border-solid">Asignadas</h5>
+          <table id="table" class="table">
+            <thead class="table-header">
+            <tr>
+              <th class="table-cell" scope="col" style="width:80px">Producto</th>
+              <th class="table-cell" scope="col" style="width:120px">Stock</th>
+              <th class="table-cell" scope="col">Ocupación</th>
+            </tr>
+            </thead>
+            <tbody>
+            <% @data.select {|id, detail| detail[:category] == product} .each do |id, detail| %>
+              <% unless detail[:available] %>
+              <tr class="table-row">
+                <td class="table-cell centered_text">
+                  <span <% if detail[:available] %>style="color:green"<% else %>style="color:red"<%end%>><%=detail[:category]%></span>
+                </td>
+                <td class="table-cell">
+                  <span <% if detail[:available] %>style="color:green"<% else %>style="color:red"<%end%>><%=id%></span>
+                </td>
+                <td class="table-cell">
+                  <% if detail[:detail].size > 0 || detail[:estimation].size > 0 %>
+
+                    <table class="table">
+                      <thead class="table-header">
+                      <tr>
+                        <th class="table-cell" scope="col" style="width:80px">Id</th>
+                        <th class="table-cell" scope="col" style="width:150px">Info</th>
+                        <th class="table-cell" scope="col" style="width:150px">Fecha inicio</th>
+                        <th class="table-cell" scope="col" style="width:150px">Fecha fin</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <% detail[:detail].each do |item| %>
+                        <tr>
+                          <td class="table-cell"><b><%= item.id %></b></td>
+                          <td class="table-cell"><%= item.title%></td>
+                          <td class="table-cell"><%= item.date_from.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_from %> <% end %></td>
+                          <td class="table-cell"><%= item.date_to.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_to %> <% end %></td>
+                        </tr>
+                      <% end %>
+                      <% detail[:estimation].each do |item| %>
+                        <tr>
+                          <td class="table-cell"><b><em><%= item.id %>*</em></b></td>
+                          <td class="table-cell"><%= item.title%></td>
+                          <td class="table-cell"><%= item.date_from.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_from %> <% end %></td>
+                          <td class="table-cell"><%= item.date_to.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_to %> <% end %></td>
+                        </tr>
+                      <% end %>
+                      </tbody>
+                    </table>
+                  <% end %>
+                </td>
+              </tr>
+              <% end %>
+            <% end %>
+            </tbody>
+          </table>
+        <% end %>
+
       <% end %>
+
     <% end %>
 
-  <h3 class="highlight_block">Detalle de la ocupación</h3>
-  <div>  
-      <table id="table" class="table">
-        <thead class="table-header">
-          <tr>
-            <th class="table-cell" scope="col" style="width:80px">Producto</th>
-            <th class="table-cell" scope="col" style="width:120px">Stock</th>
-            <th class="table-cell" scope="col">Ocupación</th>
-          </tr>
-        </thead>
-        <tbody>      
-        <% @data.each do |id, detail| %>  
-        <tr class="table-row">
-          <td class="table-cell centered_text">
-            <span <% if detail[:available] %>style="color:green"<% else %>style="color:red"<%end%>><%=detail[:category]%></span>            
-          </td>
-          <td class="table-cell">
-            <span <% if detail[:available] %>style="color:green"<% else %>style="color:red"<%end%>><%=id%></span>
-          </td>
-          <td class="table-cell">
-             <% if detail[:detail].size > 0 || detail[:estimation].size > 0 %>
-
-               <table class="table">
-                 <thead class="table-header">
-                   <tr>
-                     <th class="table-cell" scope="col" style="width:80px">Id</th>
-                     <th class="table-cell" scope="col" style="width:150px">Info</th>
-                     <th class="table-cell" scope="col" style="width:150px">Fecha inicio</th>
-                     <th class="table-cell" scope="col" style="width:150px">Fecha fin</th>
-                   </tr>
-                 </thead>
-                 <tbody>  
-                   <% detail[:detail].each do |item| %>
-                     <tr>
-                       <td class="table-cell"><b><%= item.id %></b></td>
-                       <td class="table-cell"><%= item.title%></td>
-                       <td class="table-cell"><%= item.date_from.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_from %> <% end %></td>
-                       <td class="table-cell"><%= item.date_to.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_to %> <% end %></td>
-                     </tr>      
-                   <% end %>                  
-                   <% detail[:estimation].each do |item| %>
-                     <tr>
-                       <td class="table-cell"><b><em><%= item.id %>*</em></b></td>
-                       <td class="table-cell"><%= item.title%></td>
-                       <td class="table-cell"><%= item.date_from.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_from %> <% end %></td>
-                       <td class="table-cell"><%= item.date_to.strftime('%d.%m.%Y') %> <%if @product_family.time_to_from%><%=item.time_to %> <% end %></td>
-                     </tr>      
-                   <% end %>
-                 </tbody>
-               </table>
-             <% end %>
-          </td>
-        </tr>
-        <% end %>
-        </tbody>
-      </table>
-  </div>
-  <div class="guiblock smaller_text">
-     <p>* preasignación automática</p>
-  </div>
 </div>
